syntax = "proto3";


message protoRequest{
  message requestForWorkload {
    string RFWDID =1;
    int32 LastBatchID =2;
    repeated double dataRequested =3;
    double dataAnalytics =4;
  }
  requestForWorkload RFD=1;
}